1999-05-15 Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/planner.c (pick_inclevel): check for base_level+1 if
	we don't have estimate for base_level. Needed for FORCE_BUMP.
	* server-src/planner.c (promote_highest_priority_incremental):
	Don't promote if we don't have level 0 estimate. No more need
	to check for skip_full, DS_NOFULL, DS_INCRONLY or FORCE_BUMP.

1999-05-15 Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amflush.c: ignore SIGPIPE
	* server-src/driver.c: ignore SIGPIPE
	* server-src/driverio.c (taper_cmd, dumper_cmd): return 0 on error, 
	1 on success.
	* server-src/driverio.h (taper_cmd, dumper_cmd): prototype.

1999-05-14  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/TAPE.CHANGERS (chg-rth): URL for chs is no longer valid.

1999-05-10  Mike Grupenhoff <kashmir@munge.com>

	* client-src/sendsize.c (getsize_dump): print out the strerror
	if we can't exec killpgrp.

1999-05-07 Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* example/amanda.conf.in: typo

1999-05-05  Mike Grupenhoff <kashmir@munge.com>

	* server-src/amverify.sh.in (pecho): new function.  Like echo
	but doesn't append newline, and supports \r, etc.  Implemented
	using perl.
	* server-src/amverify.sh.in: use pecho where we used to use echo -n,
	etc.  It's nearly impossible to figure out which echo needs what
	flags and also know if it supports \r.  So we just punt and use
	perl.

1999-04-29 Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/planner.c (when_overwrite): return a big number (1024)
	if the tape is not reusable.

1999-04-29  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* config/ltconfig, config/ltmain.sh, config/libtool.m4i: Updated
	from libtool 1.3.

1999-04-25  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* common-src/versuff.c.in: Adjust constness to match version.h.

	* docs/SYSTEM.NOTES: Recommend GNU tar for Linux.

1999-04-25 Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
